@@ -1,3 +1,7 @@
+2009-07-16  Sebastian Marsching <sebastian.marsching@1und1.de>
+
+	Removed code for building pustefix-core-*-data.jar.
+
 2009-07-10  Sebastian Marsching <sebastian.marsching@1und1.de>
 
 	Introduced pustefixcore scheme for access to core XML files.
